monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/InterfaceWithoutImplementation2.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar InterfaceWithoutImplementation2 {

    interface A;
    interface D extends A;

    X implements D = "x";
    Y = A;
}