monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4041/A4041.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4041;

grammar A4041 {

   symbol symbol A = "Hello";   

}
